update to brwose button

--- a/index.html
+++ b/index.html
@@ -7,26 +7,33 @@
 </head>
 <body>
     <div class="hero">
-        <button class="hero-browse-drpdwn">
-            <span class="hero-browse-drpdwn-text">Browse</span>
-            <div class="hero-browse-drpdwn-icon"></div>
-        </button>
-        <div class="hero-browse-drpdwn-content">
-            <div class="hero-browse-drpdwn-content-item">Coffee</div>
-            <div class="hero-browse-drpdwn-content-item">Equipment</div>
-            <div class="hero-browse-drpdwn-content-item">Goods</div>
-            <div class="hero-browse-drpdwn-content-item">Apparel</div>
-        </div> 
+        <div class="hero-browse-drpdwn">>
+            <button class="hero-browse-drpdwn-btn">
+                <span class="hero-browse-drpdwn-text">Browse</span>
+                <div class="hero-browse-drpdwn-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
+                </div>
+            </button>
+            <div class="hero-browse-drpdwn-content">
+                <div class="hero-browse-drpdwn-content-item">Coffee</div>
+                <div class="hero-browse-drpdwn-content-item">Equipment</div>
+                <div class="hero-browse-drpdwn-content-item">Goods</div>
+                <div class="hero-browse-drpdwn-content-item">Apparel</div>
+            </div> 
+        </div>
         <button class="hero-learn-drpdwn">
             <span class="hero-learn-drpdwn-text">Learn</span>
-            <div class="hero-learn-drpdwn-icon"></div>
+            <div class="hero-learn-drpdwn-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
+            </div>
         </button>
         <div class="hero-learn-drpdwn-content">
             <div class="hero-learn-drpdwn-content-item">About Us</div>
             <div class="hero-learn-drpdwn-content-item">Training</div>
             <div class="hero-learn-drpdwn-content-item">Events</div>
             <div class="hero-learn-drpdwn-content-item">Contact Us</div>
-        </div>   
+            <div class="hero-learn-drpdwn-content-item">FAQ</div>    
+        </div>
     </div>
     
 </body>
